# MobileRemote

./: CMakeLists.txt  RemoteServer.cpp  RemoteServer.h  main.cpp
cpp/: QrCodeGeneratorDemo
cpp/.deps/: QrCodeGeneratorDemo.d  qrcodegen.d
